# digito_dashboard_mega_cripto

./: .firebaserc  Anchor.toml  Cargo.toml  deploy.sh  firebase.json  package-lock.json  package.json
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
backend/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: bridge.ts
frontend/src/components/: CookieBanner.tsx  CryptoTicker.tsx  Footer.tsx  LoginModal.tsx  MegaMenu.tsx  ProtectedRoute.tsx  QuickBet.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: firebase.ts  solana.ts
frontend/src/pages/: AdminDash.tsx  GameInterface.tsx  HomePage.tsx  LiveDrawPage.tsx  MyBetsPage.tsx  PreviousResultsPage.tsx  PrivacyPage.tsx  ResponsibleGamingPage.tsx  RulesPage.tsx  SupportPage.tsx  TermsPage.tsx  UserDash.tsx  VerificarIdadePage.tsx
memorybank/:  checkListDoc.md  activeContext.md  admin_panel.md  checkList.md  features.md  onboarding_kyc_flow.md  prod_deployment.md  productContext.md  progress.md  rules.md  systemPatterns.md  views.md
memorybank/architecture/: systemPatterns.md  techContext.md  user_dashboard.md
memorybank/business/: features.md  onboarding_kyc_flow.md  productContext.md
memorybank/infrastructure/: rules.md
memorybank/status/: activeContext.md  checkList.md  progress.md
programs/digito_dashboard_mega_cripto/: Cargo.toml
tests/: digito_dashboard_mega_cripto.ts
(+11 files in other folders)
