[package]
name = "lottery-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.29.0"
anchor-lang = "0.29.0"
uuid = { version = "1.22.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
cached = { version = "0.49.0", features = ["async"] }
chrono = "0.4.38"

