[package]
name = "mega-cripto-uai"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
solana-client = "1.18"
solana-sdk = "1.18"
anchor-client = "0.29.0"
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
uuid = { version = "1.22.0", features = ["v4"] }
tower-http = { version = "0.6.8", features = ["cors"] }
cached = { version = "0.49.0", features = ["async"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8"
borsh = "0.10"
firebase-rs = "2.0.1"
jsonwebtoken = "9"
serde_derive = "1.0"
resend-rs = "0.5.0"
dotenvy = "0.15.7"


